# fpsci-harness

./: .gitattributes  .gitignore  .pre-commit-config.yaml  README.md  TODO.md  latin_schedules.csv  pyproject.toml  schedule.csv  schedule.json
analysis/: BUGFIXES.md  QUICKSTART.md  README.md  SUMMARY.md  check_rocket_league.py  data_processing.ipynb  methodology.md  statistical_analysis.ipynb  validate_setup.py
analysis/processed_data/: combined_data.csv  data_inventory.csv  performance_data.csv  qoe_data.csv
analysis/results/: anova_results.csv  correlation_results.csv  descriptive_stats_by_game.csv  descriptive_stats_by_game_latency.csv  descriptive_stats_by_latency.csv  effect_sizes.csv  mixed_model_performance.txt  mixed_model_qoe.txt  mixed_model_qoe_with_performance.txt  summary_table.csv  summary_table.tex  tukey_performance.txt  tukey_qoe.txt
assets/fitts/: index.jinja
assets/qoe/: questions.json
src/harness/: TestingFlow.py  TestingFlowRL.py  TestingFlowSB.py  constants.py  game.py  logging.py  main.py  process.py  schedule.py  settings.py  types.py  utils.py  video.py
src/harness/flows/: dave_the_diver.py  feeding_frenzy.py  fitts.py  half_life_2.py  next_round.py  qoe.py  rocket_league.py  start_game.py  test_round.py  thanks.py
src/harness/flows/fitts/: main.py
src/harness/flows/shared/: __init__.py  main.py
src/harness/monitoring/: __init__.py  config_logging.py  context.py  keyboard.py  keyboard.pyw  mouse.py  mouse.pyw
