[project]
name = "harness"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pillow>=12.0.0",
    "pyautogui>=0.9.54",
    "pydantic>=2.12.3",
    "pydantic-settings>=2.11.0",
    "pynput>=1.8.1",
    "pyscreeze>=1.0.1",
    "pywinauto>=0.6.9",
    "rich>=14.2.0",
    "tk>=0.1.0",
]

[dependency-groups]
dev = [
    "ruff>=0.14.2",
]

[project.scripts]
harness = "harness:main"

[build-system]
requires = ["uv_build>=0.9.5,<0.10.0"]
build-backend = "uv_build"
